--- a/driver/BUILD.bazel
+++ b/driver/BUILD.bazel
@@ -101,9 +101,9 @@ compiler_signature(
     src  = "compenv.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
+        "//stdlib:Stdlib.Format_cmi",
         "//utils:Clflags_cmi",
-        "//stdlib:Stdlib.Arg",
+        "//stdlib:Stdlib.Arg_cmi",
     ]
 )
 
@@ -134,11 +134,11 @@ compiler_signature(
     src  = "compile.mli",
     opts = SIG_OPTS,
     deps   = [
-        ":Compile_common", ## (Driver Compile_common)
-        "//typing:Typedtree",
+        ":Compile_common_cmi",
+        "//typing:Typedtree_cmi",
         "//bytecomp:Instruct_cmi",
-        "//typing:Ident",
-        "//utils:Clflags",
+        "//typing:Ident_cmi",
+        "//utils:Clflags_cmi",
     ]
 )
 
@@ -182,7 +182,7 @@ compiler_signature(
     deps   = [
         "//typing:Typedtree_cmi",
         "//parsing:Parsetree_cmi",
-        "//stdlib:Stdlib.Format",
+        "//stdlib:Stdlib.Format_cmi",
         "//typing:Env_cmi"
     ]
 )
@@ -221,9 +221,9 @@ compiler_signature(
     src  = "compmisc.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
+        "//stdlib:Stdlib.Format_cmi",
         "//typing:Env_cmi",
-        "//utils:Clflags",
+        "//utils:Clflags_cmi",
     ]
 )
 
@@ -243,7 +243,7 @@ compiler_signature(
     src  = "errors.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
+        "//stdlib:Stdlib.Format_cmi",
     ]
 )
 
@@ -300,7 +300,7 @@ compiler_signature(
     src  = "main_args.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Arg",
+        "//stdlib:Stdlib.Arg_cmi",
     ]
 )
 
@@ -341,7 +341,7 @@ compiler_signature(
     src  = "maindriver.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
+        "//stdlib:Stdlib.Format_cmi",
     ]
 )
 
@@ -419,9 +419,9 @@ compiler_signature(
     src  = "optcompile.mli",
     opts = SIG_OPTS,
     deps   = [
-        ":Compile_common", ## (Driver Compile_common)
-        "//typing:Typedtree",
-        "//utils:Clflags",
+        ":Compile_common_cmi",
+        "//typing:Typedtree_cmi",
+        "//utils:Clflags_cmi",
         "//middle_end:Backend_intf_cmi"
     ]
 )
@@ -442,7 +442,7 @@ compiler_signature(
     src  = "opterrors.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
+        "//stdlib:Stdlib.Format_cmi",
     ]
 )
 
@@ -504,7 +504,7 @@ compiler_signature(
     opts = SIG_OPTS,
     deps   = [
         "//middle_end:Backend_intf_cmi",
-        "//stdlib:Stdlib.Format",
+        "//stdlib:Stdlib.Format_cmi",
     ]
 )
 
@@ -545,8 +545,8 @@ compiler_signature(
     opts = SIG_OPTS,
     deps   = [
         "//parsing:Parsetree_cmi",
-        "//stdlib:Stdlib.Lexing",
-        "//stdlib:Stdlib.Format",
+        "//stdlib:Stdlib.Lexing_cmi",
+        "//stdlib:Stdlib.Format_cmi",
     ]
 )
 
