--- a/lambda/BUILD.bazel
+++ b/lambda/BUILD.bazel
@@ -5,6 +5,8 @@ load("//bzl:rules.bzl",
      "compiler_signature",
 )
 
+package(default_visibility = ["//visibility:public"])
+
 exports_files([
     "debuginfo.mli", "debuginfo.ml",
     "lambda.mli", "lambda.ml",
@@ -93,11 +95,14 @@ compiler_signature(
     src  = "debuginfo.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//parsing:Asttypes_cmi", # => "//parsing:Location_cmi",
+        "//parsing:Asttypes_cmi",
         "//typing:Ident_cmi",
-        "//stdlib:Stdlib.Format",
+        "//stdlib:Stdlib.Format_cmi",
     ],
-    visibility = ["//middle_end:__pkg__"]
+    visibility = [
+        "//asmcomp:__pkg__",
+        "//middle_end:__subpackages__"
+    ]
 )
 
 compiler_module(
@@ -133,17 +138,18 @@ compiler_signature(
     src  = "lambda.mli",
     opts = SIG_OPTS,
     deps   = [
-        ":Debuginfo", ## (Lambda Debuginfo)
+        ":Debuginfo_cmi",
         "//typing:Types_cmi",
-        "//typing:Primitive",
-        "//typing:Path",
-        "//typing:Ident",
+        "//typing:Primitive_cmi",
+        "//typing:Path_cmi",
+        "//typing:Ident_cmi",
         "//typing:Env_cmi",
         "//parsing:Asttypes_cmi",
     ],
     visibility = [
         "//asmcomp:__pkg__",
         "//bytecomp:__pkg__",
+        "//file_formats:__pkg__",
         "//middle_end:__pkg__",
         "//typing:__pkg__"
     ]
@@ -193,12 +199,12 @@ compiler_signature(
     src  = "matching.mli",
     opts = SIG_OPTS,
     deps   = [
-        ":Lambda", ## (Lambda Lambda)
-        ":Debuginfo", ## (Lambda Debuginfo)
+        ":Lambda_cmi",
+        ":Debuginfo_cmi",
         "//parsing:Asttypes_cmi",
         "//typing:Typedtree_cmi",
-        "//parsing:Location",
-        "//typing:Ident",
+        "//parsing:Location_cmi",
+        "//typing:Ident_cmi",
     ]
 )
 
@@ -236,11 +242,11 @@ compiler_signature(
     src  = "printlambda.mli",
     opts = SIG_OPTS,
     deps   = [
-        ":Lambda",
-        ":Debuginfo",
+        ":Lambda_cmi",
+        ":Debuginfo_cmi",
         "//parsing:Asttypes_cmi",
-        "//typing:Types",
-        "//stdlib:Stdlib.Format",
+        "//typing:Types_cmi",
+        "//stdlib:Stdlib.Format_cmi",
     ]
 )
 
@@ -294,7 +300,7 @@ compiler_signature(
     src  = "runtimedef.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib"
+        "//stdlib:Stdlib_cmi"
     ],
 )
 
@@ -332,10 +338,10 @@ compiler_signature(
     src  = "simplif.mli",
     opts = SIG_OPTS,
     deps   = [
-        ":Lambda", ## (Lambda Lambda)
-        ":Debuginfo", ## (Lambda Debuginfo)
+        ":Lambda_cmi",
+        ":Debuginfo_cmi",
         "//parsing:Asttypes_cmi",
-        "//typing:Ident",
+        "//typing:Ident_cmi",
     ]
 )
 
@@ -363,7 +369,7 @@ compiler_signature(
     src  = "switch.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib"
+        "//stdlib:Stdlib_cmi"
     ],
     visibility = ["//middle_end/flambda:__pkg__"]
 )
@@ -414,11 +420,11 @@ compiler_signature(
     src  = "translattribute.mli",
     opts = SIG_OPTS,
     deps   = [
-        ":Lambda", ## (Lambda Lambda)
-        ":Debuginfo", ## (Lambda Debuginfo)
+        ":Lambda_cmi",
+        ":Debuginfo_cmi",
         "//typing:Typedtree_cmi",
         "//parsing:Parsetree_cmi",
-        "//parsing:Location",
+        "//parsing:Location_cmi",
     ]
 )
 
@@ -457,12 +463,12 @@ compiler_signature(
     src  = "translclass.mli",
     opts = SIG_OPTS,
     deps   = [
-        ":Lambda", ## (Lambda Lambda)
-        ":Debuginfo", ## (Lambda Debuginfo)
+        ":Lambda_cmi",
+        ":Debuginfo_cmi",
          "//typing:Typedtree_cmi",
-        "//parsing:Location",
-        "//typing:Ident",
-        "//stdlib:Stdlib.Format",
+        "//parsing:Location_cmi",
+        "//typing:Ident_cmi",
+        "//stdlib:Stdlib.Format_cmi",
         "//parsing:Asttypes_cmi",
     ]
 )
@@ -511,15 +517,15 @@ compiler_signature(
     opts = SIG_OPTS,
     deps   = [
         "//parsing:Asttypes_cmi",
-        "//parsing:Location",
+        "//parsing:Location_cmi",
         "//parsing:Parsetree_cmi",
-        "//stdlib:Stdlib.Format",
-        "//typing:Env",
-        "//typing:Ident",
-        "//typing:Path",
+        "//stdlib:Stdlib.Format_cmi",
+        "//typing:Env_cmi",
+        "//typing:Ident_cmi",
+        "//typing:Path_cmi",
         "//typing:Typedtree_cmi",
-        ":Debuginfo",
-        ":Lambda",
+        ":Debuginfo_cmi",
+        ":Lambda_cmi",
     ]
 )
 
@@ -567,13 +573,13 @@ compiler_signature(
     src  = "translmod.mli",
     opts = SIG_OPTS,
     deps   = [
-        ":Lambda", ## (Lambda Lambda)
-        ":Debuginfo", ## (Lambda Debuginfo)
+        ":Lambda_cmi",
+        ":Debuginfo_cmi",
         "//parsing:Asttypes_cmi",
         "//typing:Typedtree_cmi",
-        "//typing:Primitive",
-        "//parsing:Location",
-        "//typing:Ident",
+        "//typing:Primitive_cmi",
+        "//parsing:Location_cmi",
+        "//typing:Ident_cmi",
     ]
 )
 
@@ -602,11 +608,11 @@ compiler_signature(
     src  = "translobj.mli",
     opts = SIG_OPTS,
     deps   = [
-        ":Lambda", ## (Lambda Lambda)
-        ":Debuginfo", ## (Lambda Debuginfo)
+        ":Lambda_cmi",
+        ":Debuginfo_cmi",
         "//parsing:Asttypes_cmi",
-        "//typing:Ident",
-        "//typing:Env",
+        "//typing:Ident_cmi",
+        "//typing:Env_cmi",
     ]
 )
 
@@ -646,17 +652,17 @@ compiler_signature(
     src  = "translprim.mli",
     opts = SIG_OPTS,
     deps   = [
-        ":Lambda",
-        ":Debuginfo",
+        ":Lambda_cmi",
+        ":Debuginfo_cmi",
         "//parsing:Asttypes_cmi",
-        "//typing:Types",
+        "//typing:Types_cmi",
          "//typing:Typedtree_cmi",
-        "//typing:Primitive",
-        "//typing:Path",
-        "//parsing:Location",
-        "//typing:Ident",
-        "//stdlib:Stdlib.Format",
-        "//typing:Env",
+        "//typing:Primitive_cmi",
+        "//typing:Path_cmi",
+        "//parsing:Location_cmi",
+        "//typing:Ident_cmi",
+        "//stdlib:Stdlib.Format_cmi",
+        "//typing:Env_cmi",
     ]
 )
 
