--- a/parsing/BUILD.bazel
+++ b/parsing/BUILD.bazel
@@ -118,13 +118,16 @@ compiler_signature(
     src  = "ast_helper.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
+        "//stdlib:Stdlib.Format_cmi",
         ":Asttypes_cmi",
-        ":Docstrings",
-        ":Location",
-        ":Longident",
+        ":Docstrings_cmi",
+        ":Location_cmi",
+        ":Longident_cmi",
         ":Parsetree_cmi",
-    ]
+    ],
+    visibility = [
+        "//typing:__pkg__"
+        ]
 )
 
 compiler_module(
@@ -147,9 +150,9 @@ compiler_signature(
     src  = "ast_invariants.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
-        ":Location",
-        ":Longident",
+        "//stdlib:Stdlib.Format_cmi",
+        ":Location_cmi",
+        ":Longident_cmi",
         ":Asttypes_cmi",
         ":Parsetree_cmi",
     ]
@@ -175,9 +178,9 @@ compiler_signature(
     src  = "ast_iterator.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
-        ":Location",
-        ":Longident",
+        "//stdlib:Stdlib.Format_cmi",
+        ":Location_cmi",
+        ":Longident_cmi",
         ":Parsetree_cmi",
     ]
 )
@@ -214,9 +217,9 @@ compiler_signature(
     src  = "ast_mapper.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
-        ":Location",
-        ":Longident",
+        "//stdlib:Stdlib.Format_cmi",
+        ":Location_cmi",
+        ":Longident_cmi",
         ":Asttypes_cmi",
         ":Parsetree_cmi",
     ]
@@ -227,8 +230,8 @@ compiler_signature(
     src  = "asttypes.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
-        ":Location",
+        "//stdlib:Stdlib.Format_cmi",
+        ":Location_cmi",
     ],
     visibility = [
         "//asmcomp:__pkg__",
@@ -263,10 +266,10 @@ compiler_signature(
     src  = "attr_helper.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
+        "//stdlib:Stdlib.Format_cmi",
         ":Asttypes_cmi",
-        ":Location",
-        ":Longident",
+        ":Location_cmi",
+        ":Longident_cmi",
         ":Parsetree_cmi",
     ]
 )
@@ -299,10 +302,10 @@ compiler_signature(
     src  = "builtin_attributes.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
-        "//utils:Misc",
-        ":Location",
-        ":Longident",
+        "//stdlib:Stdlib.Format_cmi",
+        "//utils:Misc_cmi",
+        ":Location_cmi",
+        ":Longident_cmi",
         ":Asttypes_cmi",
         ":Parsetree_cmi",
     ]
@@ -330,10 +333,10 @@ compiler_signature(
     src  = "depend.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
-        "//utils:Misc",
-        ":Location",
-        ":Longident",
+        "//stdlib:Stdlib.Format_cmi",
+        "//utils:Misc_cmi",
+        ":Location_cmi",
+        ":Longident_cmi",
         ":Asttypes_cmi",
         ":Parsetree_cmi",
     ]
@@ -362,11 +365,11 @@ compiler_signature(
     src  = "docstrings.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
-        "//stdlib:Stdlib.Lazy",
-        "//stdlib:Stdlib.Lexing",
-        ":Location",
-        ":Longident",
+        "//stdlib:Stdlib.Format_cmi",
+        "//stdlib:Stdlib.Lazy_cmi",
+        "//stdlib:Stdlib.Lexing_cmi",
+        ":Location_cmi",
+        ":Longident_cmi",
         ":Parsetree_cmi",
     ]
 )
@@ -400,8 +403,8 @@ compiler_signature(
     src    = "camlinternalMenhirLib.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Lazy",
-        "//stdlib:Stdlib.Lexing",
+        "//stdlib:Stdlib.Lazy_cmi",
+        "//stdlib:Stdlib.Lexing_cmi",
     ]
 )
 
@@ -493,9 +496,14 @@ compiler_signature(
         "//stdlib:Stdlib.Buffer_cmi",
         "//stdlib:Stdlib.Format_cmi",
         "//stdlib:Stdlib.Lexing_cmi",
-        "//utils:Warnings",
+        "//utils:Warnings_cmi",
     ],
-    visibility = ["//lambda:__pkg__"]
+    visibility = [
+        "//bytecomp:__pkg__",
+        "//file_formats:__pkg__",
+        "//lambda:__pkg__",
+        "//typing:__pkg__"
+    ]
 )
 
 compiler_module(
@@ -523,9 +531,10 @@ compiler_signature(
     src  = "longident.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib",
-       "//stdlib:Stdlib.Format"
-    ]
+        "//stdlib:Stdlib_cmi",
+       "//stdlib:Stdlib.Format_cmi"
+    ],
+    visibility = ["//typing:__pkg__"]
 )
 
 compiler_module(
@@ -556,10 +565,10 @@ compiler_signature(
     src  = "parse.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
-        "//stdlib:Stdlib.Lexing",
-        ":Location",
-        ":Longident",
+        "//stdlib:Stdlib.Format_cmi",
+        "//stdlib:Stdlib.Lexing_cmi",
+        ":Location_cmi",
+        ":Longident_cmi",
         ":Parsetree_cmi",
     ]
 )
@@ -605,9 +614,9 @@ compiler_signature(
     src  = "parser.mli",
     opts = SIG_OPTS,
     deps   = [
-        ":CamlinternalMenhirLib",
-        ":Docstrings",
-        ":Location"
+        ":CamlinternalMenhirLib_cmi",
+        ":Docstrings_cmi",
+        ":Location_cmi"
     ]
 )
 
@@ -670,9 +679,9 @@ compiler_signature(
     src  = "pprintast.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
-        ":Location",
-        ":Longident",
+        "//stdlib:Stdlib.Format_cmi",
+        ":Location_cmi",
+        ":Longident_cmi",
         ":Asttypes_cmi",
         ":Parsetree_cmi",
     ]
@@ -707,9 +716,9 @@ compiler_signature(
     src  = "printast.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
-        ":Location",
-        ":Longident",
+        "//stdlib:Stdlib.Format_cmi",
+        ":Location_cmi",
+        ":Longident_cmi",
         ":Asttypes_cmi",
         ":Parsetree_cmi",
     ]
@@ -736,8 +745,8 @@ compiler_signature(
     src  = "syntaxerr.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
-        ":Location",
+        "//stdlib:Stdlib.Format_cmi",
+        ":Location_cmi",
     ]
 )
 
