--- a/utils/BUILD.bazel
+++ b/utils/BUILD.bazel
@@ -169,7 +169,7 @@ compiler_signature(
     src  = "arg_helper.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Map",
+        "//stdlib:Stdlib.Map_cmi",
     ]
 )
 
@@ -211,7 +211,7 @@ compiler_signature(
     src  = "binutils.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Result",
+        "//stdlib:Stdlib.Result_cmi",
     ]
 )
 
@@ -239,7 +239,7 @@ compiler_signature(
     src  = "build_path_prefix_map.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib"
+        "//stdlib:Stdlib_cmi"
     ]
 )
 
@@ -274,7 +274,7 @@ compiler_signature(
     src  = "ccomp.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib"
+        "//stdlib:Stdlib_cmi"
     ]
 )
 
@@ -315,10 +315,10 @@ compiler_signature(
     src  = "clflags.mli",
     opts = SIG_OPTS,
     deps   = [
-        ":Profile", ## (Utils Profile)
-        ":Misc", ## (Utils Misc)
-        "//stdlib:Stdlib.Digest",
-        "//stdlib:Stdlib.Arg",
+        ":Profile_cmi",
+        ":Misc_cmi",
+        "//stdlib:Stdlib.Digest_cmi",
+        "//stdlib:Stdlib.Arg_cmi",
     ],
     visibility = ["//driver:__pkg__"]
 )
@@ -465,11 +465,14 @@ compiler_signature(
     src  = "consistbl.mli",
     opts = SIG_OPTS,
     deps   = [
-        ":Misc", ## (Utils Misc)
-        "//stdlib:Stdlib.Set",
-        "//stdlib:Stdlib.Map",
-        "//stdlib:Stdlib.Hashtbl",
-        "//stdlib:Stdlib.Digest",
+        ":Misc_cmi",
+        "//stdlib:Stdlib.Set_cmi",
+        "//stdlib:Stdlib.Map_cmi",
+        "//stdlib:Stdlib.Hashtbl_cmi",
+        "//stdlib:Stdlib.Digest_cmi",
+    ],
+    visibility = [
+        "//typing:__pkg__"
     ]
 )
 
@@ -494,9 +497,12 @@ compiler_signature(
     src  = "diffing.mli",
     opts = SIG_OPTS,
     deps   = [
-        ":Misc", ## (Utils Misc)
-        "//stdlib:Stdlib.Format",
-        "//stdlib:Stdlib.Digest",
+        ":Misc_cmi",
+        "//stdlib:Stdlib.Format_cmi",
+        "//stdlib:Stdlib.Digest_cmi",
+    ],
+    visibility = [
+        "//typing:__pkg__"
     ]
 )
 
@@ -523,8 +529,8 @@ compiler_signature(
     src  = "diffing_with_keys.mli",
     opts = SIG_OPTS,
     deps   = [
-        ":Diffing", ## (Utils Diffing)
-        "//stdlib:Stdlib.Format",
+        ":Diffing_cmi",
+        "//stdlib:Stdlib.Format_cmi",
     ],
     visibility = ["//typing:__pkg__"]
 )
@@ -572,7 +578,7 @@ compiler_signature(
     name = "Domainstate_cmi",
     src  = "domainstate.mli",
     opts = SIG_OPTS,
-    deps   = ["//stdlib:Stdlib"]
+    deps   = ["//stdlib:Stdlib_cmi"]
 )
 
 mustache(
@@ -635,15 +641,16 @@ compiler_signature(
     src  = "identifiable.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Set",
-        "//stdlib:Stdlib.Map",
-        "//stdlib:Stdlib.Hashtbl",
-        "//stdlib:Stdlib.Format",
+        "//stdlib:Stdlib.Set_cmi",
+        "//stdlib:Stdlib.Map_cmi",
+        "//stdlib:Stdlib.Hashtbl_cmi",
+        "//stdlib:Stdlib.Format_cmi",
     ],
     visibility = [
         "//middle_end:__subpackages__",
         "//middle_end/flambda/base_types:__subpackages__",
         "//otherlibs/dynlink:__pkg__",
+        "//typing:__pkg__",
         "//utils:__pkg__"
     ]
 )
@@ -667,7 +674,7 @@ compiler_signature(
     name = "Int_replace_polymorphic_compare_cmi",
     src  = "int_replace_polymorphic_compare.mli",
     opts = SIG_OPTS,
-    deps   = ["//stdlib:Stdlib"]
+    deps   = ["//stdlib:Stdlib_cmi"]
 )
 
 compiler_module(
@@ -690,8 +697,8 @@ compiler_signature(
     src  = "lazy_backtrack.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib",
-        "//stdlib:Stdlib.Either",
+        "//stdlib:Stdlib_cmi",
+        "//stdlib:Stdlib.Either_cmi",
     ],
     visibility = ["//typing:__pkg__"]
 )
@@ -731,7 +738,8 @@ compiler_signature(
     opts = SIG_OPTS,
     deps   = [
         "//stdlib:Stdlib_cmi"
-    ]
+    ],
+    visibility = ["//typing:__pkg__"]
 )
 
 compiler_module(
@@ -810,17 +818,20 @@ compiler_signature(
     opts = SIG_OPTS,
     deps   = [
         "//config:Config_cmi",
-        ":Build_path_prefix_map",
-        "//stdlib:Stdlib.String",
-        "//stdlib:Stdlib.Set",
-        "//stdlib:Stdlib.Map",
-        "//stdlib:Stdlib.Hashtbl",
-        "//stdlib:Stdlib.Format",
-        "//stdlib:Stdlib.Digest",
+        ":Build_path_prefix_map_cmi",
+        "//stdlib:Stdlib.String_cmi",
+        "//stdlib:Stdlib.Set_cmi",
+        "//stdlib:Stdlib.Map_cmi",
+        "//stdlib:Stdlib.Hashtbl_cmi",
+        "//stdlib:Stdlib.Format_cmi",
+        "//stdlib:Stdlib.Digest_cmi",
     ],
     visibility = [
         "//asmcomp:__pkg__",
-        "//file_formats:__pkg__"
+        "//bytecomp:__pkg__",
+        "//file_formats:__pkg__",
+        "//parsing:__pkg__",
+        "//typing:__pkg__"
     ]
 )
 
@@ -854,11 +865,14 @@ compiler_signature(
     src  = "numbers.mli",
     opts = SIG_OPTS,
     deps   = [
-        ":Identifiable",
-        "//stdlib:Stdlib.Set",
-        "//stdlib:Stdlib.Map",
-        "//stdlib:Stdlib.Int64",
-        "//stdlib:Stdlib.Hashtbl",
+        ":Identifiable_cmi",
+        "//stdlib:Stdlib.Set_cmi",
+        "//stdlib:Stdlib.Map_cmi",
+        "//stdlib:Stdlib.Int64_cmi",
+        "//stdlib:Stdlib.Hashtbl_cmi",
+    ],
+    visibility = [
+        "//middle_end:__subpackages__"
     ]
 )
 
@@ -1024,5 +1038,7 @@ compiler_signature(
     ],
     visibility = [
         "//otherlibs/dynlink:__pkg__",
+        "//parsing:__pkg__",
+        "//typing:__pkg__"
     ]
 )
